fixed spacing

--- a/css/indexnew.css
+++ b/css/indexnew.css
@@ -15,18 +15,33 @@
 }
 #section2 {
     background-color: #2F2F2F;
+	
+	padding-left: 2%;
+	padding-top: 5%;
 }
 #section3 {
     background-color: #2F2F2F;
+	
+	padding-left: 2%;
+	padding-top: 5%;
 }
 #section4 {
     background-color: #2F2F2F;
+	
+	padding-left: 2%;
+	padding-top: 5%;
 }
 #section5 {
     background-color: #2F2F2F;
+	
+	padding-left: 2%;
+	padding-top: 5%;
 }
 #section6 {
     background-color: #2F2F2F;
+	
+	padding-left: 2%;
+	padding-top: 5%;
 }
 #section7 {
     background-color: #2F2F2F;
